# telegramd

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: chat_data.rs  command.rs  files.rs  lib.rs  main.rs  message.rs
