[package]
name = "telegramd"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.72"
dotenv = "0.15.0"
futures = "0.3.28"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.183", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
